syntax = "proto3";
package proto;
option go_package = "./;proto";

import "google/protobuf/empty.proto";

message EngineInfo {
    string id = 1;
    string description = 2;
    int32 engine_type = 3;
    string model_path = 4;
    repeated string names = 5;
    float confidence = 6;
    float iou = 7;
    bool use_gpu = 8;
}

message Position {
    int32 x = 1;
    int32 y = 2;
}

message SingleResult {
    string name = 1;
    float confidence = 2;
    repeated Position box = 3;
    Position center = 4;
}

// 1. 修改这里：加 Request 后缀
message InitEngineRequest {
    int32 engine_type = 1;
    string model_path = 2;
    repeated string names = 3;
    float confidence = 5;
    float iou = 6;
    bool use_gpu = 7;
    string description = 8;
}

message InitEngineResponse{
    bool success = 1;
    string id = 2;
    string message = 3;
}

// 2. 修改这里：加 Request 后缀
message InferenceRequest {
    string id = 1;
    bytes img_data = 2;
}

message InferenceResponse{
    bool success = 1;
    repeated SingleResult results = 2;
}

// 3. 修改这里：加 Request 后缀
message DestroyEngineRequest {
    string id = 1;
}

message DestroyEngineResponse{
    bool success = 1;
    string message = 2;
}

// 4. 修改这里：加 Request 后缀
message CheckEngineRequest {
    string id = 1;
}

message CheckEngineResponse{
    bool success = 1;
    EngineInfo engine_info = 2;
    string message = 3;
}

message CheckAllEngineResponse{
    bool success = 1;
    repeated EngineInfo engines = 2;
    string message = 3;
}

service DetectService {
    // 5. 修改这里：参数引用新的 Request 名字
    rpc InitEngine(InitEngineRequest) returns (InitEngineResponse);

    // 6. 修改这里
    rpc Inference(InferenceRequest) returns (InferenceResponse);

    // 7. 修改这里
    rpc DestroyEngine(DestroyEngineRequest) returns (DestroyEngineResponse);

    // 8. 修改这里
    rpc CheckEngine(CheckEngineRequest) returns (CheckEngineResponse);

    rpc CheckAllEngine(google.protobuf.Empty) returns (CheckAllEngineResponse);
    rpc Shutdown(google.protobuf.Empty) returns (google.protobuf.Empty);
}